--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             </center>
         </div>
         <div class="copy_right_footer"> Developed By- Amaan</div>
+        <script src="main.js"></script>
     </body>
 </html>
